--- a/app/src/main/res/layout/activity_list_added_assortment_inventory.xml
+++ b/app/src/main/res/layout/activity_list_added_assortment_inventory.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     tools:context=".ListAddedAssortmentInventory">
 
 
@@ -11,6 +12,7 @@
         android:id="@+id/appBarLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +22,6 @@
             android:id="@+id/toolbar_list_inve"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -33,12 +34,12 @@
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
+        android:focusable="true"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="#00FFFFFF"
-        app:srcCompat="@drawable/close_white_48dp"
-        android:focusable="true" />
+        app:srcCompat="@drawable/close_white_48dp" />
 
     <LinearLayout
         android:id="@+id/headerList"
@@ -91,7 +92,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerList" >
+        app:layout_constraintTop_toBottomOf="@+id/headerList">
 
     </ListView>
 </android.support.constraint.ConstraintLayout>
