--- a/app/src/main/res/layout/content_securitate.xml
+++ b/app/src/main/res/layout/content_securitate.xml
@@ -5,6 +5,7 @@
     android:id="@+id/background_constraint_securitate"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SettingsMenu.Securitate"
     tools:ignore="MissingTranslation"
@@ -13,21 +14,41 @@
     <Button
         android:id="@+id/btn_chek_update2"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_blue"
+        android:drawableLeft="@drawable/arrow_up_white_48dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="@string/btn_donload_install_new_version"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/select_lng_ro"
+        app:layout_constraintEnd_toStartOf="@+id/btn_chek_downgrade"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+
+    <Button
+        android:id="@+id/btn_chek_downgrade"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/item_selector_button_blue"
+        android:drawableLeft="@drawable/arrow_down_white_48dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="@string/btn_donload_install_old_version"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_chek_update2"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <EditText
@@ -44,7 +65,7 @@
         android:gravity="center"
         android:inputType="number"
         android:selectAllOnFocus="true"
-        android:text="0000"
+        android:text="0"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +79,7 @@
 
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_blue"
@@ -203,6 +224,8 @@
         android:id="@+id/select_lng_ro"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
@@ -211,8 +234,8 @@
         android:padding="6dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toStartOf="@+id/select_lng_ru"
-        app:layout_constraintStart_toEndOf="@+id/btn_chek_update2"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_chek_update2"
         app:srcCompat="@drawable/romania" />
 
     <ImageButton
@@ -220,29 +243,28 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
         android:background="@drawable/item_selector_language"
         android:contentDescription="@string/todo"
         android:padding="6dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toStartOf="@+id/select_lng_en"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        app:layout_constraintStart_toEndOf="@+id/select_lng_ro"
+        app:layout_constraintTop_toBottomOf="@+id/btn_chek_update2"
         app:srcCompat="@drawable/russia" />
 
     <ImageButton
         android:id="@+id/select_lng_en"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
         android:background="@drawable/item_selector_language"
         android:contentDescription="@string/todo"
         android:padding="6dp"
         android:scaleType="centerInside"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        app:layout_constraintStart_toEndOf="@+id/select_lng_ru"
+        app:layout_constraintTop_toBottomOf="@+id/btn_chek_update2"
         app:srcCompat="@drawable/united_states" />
 
 
