--- a/app/src/main/res/layout/activity_count_inventory.xml
+++ b/app/src/main/res/layout/activity_count_inventory.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     tools:context=".CountInventory"
     tools:ignore="MissingTranslation">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayoutinventory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +22,6 @@
             android:id="@+id/toolbar_count_inventory"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -33,7 +35,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:gravity="center_horizontal"
+        android:gravity="center|center_horizontal"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +64,7 @@
             android:text="@string/txt_barcod_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtbarcode_count_inventory"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -75,6 +78,7 @@
             android:layout_marginRight="4dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -87,6 +91,7 @@
             android:text="@string/txt_cod_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtcode_assortment_count_inventory"
             app:layout_constraintStart_toEndOf="@+id/txtMarking_asortment_count_inventory"
             app:layout_constraintTop_toBottomOf="@+id/txtbarcode_count_inventory" />
@@ -99,6 +104,7 @@
             android:layout_marginRight="4dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -113,6 +119,7 @@
             android:text="@string/txt_marking_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtMarking_asortment_count_inventory"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -125,6 +132,7 @@
             android:layout_marginRight="8dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/textView6"
             app:layout_constraintHorizontal_bias="0.525"
@@ -140,6 +148,7 @@
             android:text="@string/txt_price_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtPrice_asortment_count_inventory"
             app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +162,7 @@
             android:layout_marginRight="4dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +181,7 @@
         android:layout_marginRight="8dp"
         android:text="@string/txt_in_stoc_count_inventory"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/txtStoc_count_inventory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CL_info_asortment_inv" />
@@ -186,7 +196,7 @@
         android:layout_marginRight="8dp"
         android:gravity="end"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView28"
         app:layout_constraintTop_toBottomOf="@+id/CL_info_asortment_inv" />
@@ -199,7 +209,8 @@
         android:layout_marginLeft="8dp"
         android:text="@string/txt_total_scanat_count_inventory"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtTotalScanat_count_inventory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView28" />
@@ -214,7 +225,8 @@
         android:layout_marginRight="8dp"
         android:gravity="end"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView30"
         app:layout_constraintTop_toBottomOf="@+id/txtStoc_count_inventory" />
@@ -226,7 +238,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:text="@string/txt_ramas_count_inventory"
-        android:textSize="14sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toStartOf="@+id/txt_ramas_inventory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView30" />
@@ -240,7 +254,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:gravity="end"
-        android:textSize="14sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView34"
         app:layout_constraintTop_toBottomOf="@+id/txtTotalScanat_count_inventory" />
@@ -252,7 +267,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:text="@string/txt_surplus_count_inventory"
-        android:textSize="14sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toStartOf="@+id/txt_surplus_inventory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView34" />
@@ -266,7 +283,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:gravity="end"
-        android:textSize="14sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView36"
         app:layout_constraintTop_toBottomOf="@+id/txt_ramas_inventory" />
@@ -277,11 +295,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/txt_cantitatea_finala_count_inventory"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView36" />
@@ -304,9 +321,8 @@
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginRight="71dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/round_corners_red_edit_text"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
@@ -319,11 +335,10 @@
 
     <Button
         android:id="@+id/btn_add_count_inventory"
-        android:layout_width="130dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/round_corners_blue_button"
