--- a/app/src/main/res/layout/activity_count_invoice.xml
+++ b/app/src/main/res/layout/activity_count_invoice.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     tools:context=".CountInvoice">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayoutInvoice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +21,6 @@
             android:id="@+id/toolbar_count_invoice"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -211,6 +213,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:text="@string/txt_profit_invoice"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView42" />
@@ -224,8 +227,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:gravity="end"
-        android:textSize="18sp"
         android:paddingRight="8dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView44"
         app:layout_constraintTop_toBottomOf="@+id/txtSumn_sales_count_invoice" />
