--- a/app/src/main/res/layout/activity_count_transfer.xml
+++ b/app/src/main/res/layout/activity_count_transfer.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     tools:context=".CountTransfer"
     tools:ignore="MissingTranslation">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout_trasfer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +22,6 @@
             android:id="@+id/toolbar_count_transfer"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -33,7 +35,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,7 +44,7 @@
 
     <Button
         android:id="@+id/btn_add_count_transfer"
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -78,8 +80,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginRight="71dp"
         android:background="@drawable/round_corners_red_edit_text"
         android:ems="10"
         android:gravity="center"
@@ -112,6 +112,7 @@
             android:text="@string/txt_barcod_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtBarcode_assortment_count_transfer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -125,6 +126,7 @@
             android:layout_marginRight="4dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -139,6 +141,7 @@
             android:text="@string/txt_cod_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtcode_assortment_count_transfer"
             app:layout_constraintStart_toStartOf="parent"
@@ -152,6 +155,7 @@
             android:layout_marginRight="8dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView12"
@@ -167,6 +171,7 @@
             android:text="@string/txt_marking_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtMarking_asortment_count_transfer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -179,6 +184,7 @@
             android:layout_marginRight="8dp"
             android:gravity="end"
             android:singleLine="true"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/textView10"
             app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -191,6 +197,7 @@
             android:text="@string/txt_remain_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtStoc_asortment_count_transfer"
             app:layout_constraintStart_toEndOf="@+id/txtMarking_asortment_count_transfer"
             app:layout_constraintTop_toBottomOf="@+id/txtBarcode_assortment_count_transfer" />
@@ -216,6 +223,7 @@
             android:text="@string/txt_price_header_asl"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtPrice_asortment_count_transfer"
             app:layout_constraintStart_toEndOf="@+id/txtcode_assortment_count_transfer"
@@ -229,6 +237,7 @@
             android:layout_marginRight="4dp"
             android:gravity="end"
             android:text="0"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
