--- a/app/src/main/res/layout/activity_get_client.xml
+++ b/app/src/main/res/layout/activity_get_client.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     tools:context=".GetClient"
-    tools:layout_editor_absoluteY="81dp"
-    tools:ignore="MissingTranslation">
+    tools:ignore="MissingTranslation"
+    tools:layout_editor_absoluteY="81dp">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,25 +23,30 @@
             android:id="@+id/toolbar_getClient"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
     <ImageView
         android:id="@+id/imageLogin"
         android:layout_width="wrap_content"
         android:layout_height="180dp"
         android:layout_below="@id/appBarLayout"
-        app:srcCompat="@drawable/login_img" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+
+        app:srcCompat="@drawable/login" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:padding="2dp"
-        android:layout_alignParentLeft="true">
+        android:padding="2dp">
 
         <Button
             android:id="@+id/btn_cancel_getClient"
@@ -67,7 +75,7 @@
 
     <EditText
         android:id="@+id/passwords_client"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageLogin"
         android:layout_centerHorizontal="true"
