--- a/app/src/main/res/layout/content_conect.xml
+++ b/app/src/main/res/layout/content_conect.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SettingsMenu.Conect"
-    tools:showIn="@layout/app_bar_conect"
-    tools:ignore="MissingTranslation">
+    tools:ignore="MissingTranslation"
+    tools:showIn="@layout/app_bar_conect">
 
     <Button
         android:id="@+id/btn_test_conect"
