--- a/app/src/main/res/layout/activity_count_inventory.xml
+++ b/app/src/main/res/layout/activity_count_inventory.xml
@@ -327,6 +327,7 @@
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:inputType="numberDecimal"
+        android:imeOptions="actionDone"
         android:maxLength="6"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_add_count_inventory"
