--- a/app/src/main/res/layout/content_check_price.xml
+++ b/app/src/main/res/layout/content_check_price.xml
@@ -56,7 +56,7 @@
         android:singleLine="true"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +80,7 @@
         android:id="@+id/progressBar_check_price"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="10dp"
         android:indeterminate="true"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
