--- a/app/src/main/res/layout/activity_count_sales.xml
+++ b/app/src/main/res/layout/activity_count_sales.xml
@@ -222,6 +222,8 @@
         android:gravity="center"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
+        android:text="1"
         android:maxLength="6"
         android:singleLine="true"
         android:textSize="24sp"
