--- a/app/src/main/res/layout/show_asl_sales.xml
+++ b/app/src/main/res/layout/show_asl_sales.xml
@@ -9,26 +9,49 @@
     android:paddingBottom="4dp"
     android:paddingTop="4dp">
 
-    <TextView
-        android:id="@+id/textName"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
-        android:paddingLeft="4dp"
-        android:textAlignment="textStart"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textColor="@color/colorAccent"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:fontFamily="monospace"
-        android:gravity="start" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:paddingLeft="4dp"
+            android:text="text"
+            android:textAlignment="textStart"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:textColor="@color/colorAccent"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:fontFamily="monospace" />
+
+        <TextView
+            android:id="@+id/textNameWare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:paddingLeft="4dp"
+            android:text="text"
+            android:textAlignment="textStart"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:textColor="@color/back_gray"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:fontFamily="monospace" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textCantitate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="0.2"
         android:gravity="center_horizontal|center_vertical"
+        android:text="0"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@color/colorPrimaryDark"
@@ -39,12 +62,12 @@
     <TextView
         android:id="@+id/textSuma"
         android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.3"
+        android:layout_height="match_parent"
+        android:layout_weight="0.4"
         android:gravity="center_vertical|end"
         android:paddingRight="10dp"
+        android:text="0"
         android:textAlignment="textEnd"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@color/design_default_color_primary_dark"
         android:textSize="14sp"
         android:textStyle="bold"
